# bitcoin

./: CONTRIBUTING.md  Makefile.am  README.md  autogen.sh  configure.ac
src/: .bear-tidy-config  .clang-format  .clang-tidy  Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.minisketch.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bip324.cpp  bip324.h  bitcoin-chainstate.cpp  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-util.cpp  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.cpp  (+118 more)
src/bench/: addrman.cpp  bench.cpp  bench.h  bench_bitcoin.cpp  bip324_ecdh.cpp  block_assemble.cpp  ccoins_caching.cpp  chacha20.cpp  checkblockindex.cpp  checkqueue.cpp  cluster_linearize.cpp  coin_selection.cpp  crypto_hash.cpp  data.cpp  data.h  disconnected_transactions.cpp  duplicate_inputs.cpp  ellswift.cpp  gcs_filter.cpp  hashpadding.cpp  index_blockfilter.cpp  load_external.cpp  lockedpool.cpp  logging.cpp  mempool_eviction.cpp  mempool_stress.cpp  nanobench.h  parse_hex.cpp  peer_eviction.cpp  prevector.cpp  random.cpp  readblock.cpp  rollingbloom.cpp  rpc_blockchain.cpp  sign_transaction.cpp  streams_findbyte.cpp  verify_script.cpp  wallet_balance.cpp  wallet_create.cpp  wallet_create_tx.cpp  (+3 more)
src/common/: args.cpp  args.h  bloom.cpp  bloom.h  config.cpp  init.cpp  interfaces.cpp  messages.cpp  messages.h  settings.cpp  settings.h  signmessage.cpp  signmessage.h  system.cpp  system.h  types.h  url.cpp  url.h
src/compat/: byteswap.h  compat.h  cpuid.h  endian.h  stdin.cpp  stdin.h
src/consensus/: amount.h  merkle.cpp  merkle.h  params.h  tx_check.cpp  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/crc32c/: .appveyor.yml  .travis.yml  .ycm_extra_conf.py  AUTHORS  CMakeLists.txt  LICENSE  README.md
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  chacha20poly1305.cpp  chacha20poly1305.h  common.h  hex_base.cpp  hex_base.h  hkdf_sha256_32.cpp  hmac_sha256.cpp  hmac_sha512.h  muhash.cpp  muhash.h  poly1305.cpp  poly1305.h  ripemd160.cpp  sha1.cpp  sha256.cpp  sha256.h  sha256_arm_shani.cpp  sha256_avx2.cpp  sha256_sse4.cpp  sha256_sse41.cpp  sha256_x86_shani.cpp  sha3.cpp  sha512.cpp  sha512.h  siphash.cpp  siphash.h
src/index/: base.cpp  base.h  blockfilterindex.cpp  blockfilterindex.h  coinstatsindex.cpp  coinstatsindex.h  txindex.cpp  txindex.h
src/init/: bitcoin-gui.cpp  bitcoin-node.cpp  bitcoin-wallet.cpp  common.cpp  common.h
src/interfaces/: README.md  chain.h  handler.h  init.h  ipc.h  mining.h  node.h  wallet.h
src/ipc/: interfaces.cpp  process.cpp  process.h
src/kernel/: chainparams.cpp  chainparams.h  chainstatemanager_opts.h  coinstats.cpp  coinstats.h  disconnected_transactions.cpp  disconnected_transactions.h  mempool_entry.h  mempool_options.h  mempool_removal_reason.h  notifications_interface.h  warning.h
src/leveldb/: .clang-format  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NEWS  README.md
src/logging/: timer.h
src/minisketch/: .cirrus.yml  Makefile.am  README.md  configure.ac  sources.mk
src/node/: README.md  blockstorage.cpp  blockstorage.h  caches.cpp  caches.h  chainstate.cpp  chainstate.h  chainstatemanager_args.cpp  coins_view_args.cpp  connection_types.h  context.h  eviction.cpp  eviction.h  interface_ui.cpp  interface_ui.h  interfaces.cpp  kernel_notifications.cpp  kernel_notifications.h  mempool_args.cpp  mempool_persist.cpp  miner.cpp  miner.h  mini_miner.cpp  mini_miner.h  minisketchwrapper.cpp  peerman_args.cpp  peerman_args.h  protocol_version.h  psbt.cpp  psbt.h  timeoffsets.cpp  timeoffsets.h  transaction.cpp  transaction.h  txreconciliation.cpp  txreconciliation.h  types.h  utxo_snapshot.cpp  utxo_snapshot.h  warnings.cpp  (+1 more)
src/policy/: feerate.h  fees.cpp  fees.h  packages.cpp  packages.h  policy.cpp  policy.h  rbf.cpp  rbf.h  truc_policy.cpp  truc_policy.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoin.cpp  bitcoin.h  bitcoin.qrc  bitcoin_locale.qrc  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  createwalletdialog.cpp  csvmodelwriter.cpp  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  initexecutor.cpp  initexecutor.h  intro.cpp  intro.h  (+72 more)
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  external_signer.cpp  fees.cpp  mempool.cpp  mempool.h  mining.cpp  mining.h  net.cpp  node.cpp  output_script.cpp  protocol.h  rawtransaction.cpp  rawtransaction_util.cpp  rawtransaction_util.h  request.cpp  request.h  server.cpp  server.h  server_util.cpp  signmessage.cpp  txoutproof.cpp  util.cpp  util.h
src/script/: descriptor.cpp  descriptor.h  interpreter.cpp  interpreter.h  keyorigin.h  miniscript.cpp  miniscript.h  parsing.cpp  parsing.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  signingprovider.cpp  signingprovider.h  solver.cpp  solver.h
src/secp256k1/: .cirrus.yml  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  Makefile.am  README.md  configure.ac
src/support/: cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  argsman_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  bech32_tests.cpp  bip324_tests.cpp  (+103 more)
(+1444 files in other folders)
